--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ rust:
 - nightly
 before_install:
 - openssl aes-256-cbc -K $encrypted_8eea97380c73_key -iv $encrypted_8eea97380c73_iv
-  -in secure.json.enc -out ~/secure.json -d
+  -in secure.json.enc -out ~/rust/secure.json -d
 deploy:
   provider: gae
   keyfile: ~/secure.json
-  project: vrdata-dev
+  project: hello-rocket
   skip_cleanup: true
