--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ rust:
 - nightly
 before_install:
 - openssl aes-256-cbc -K $encrypted_8eea97380c73_key -iv $encrypted_8eea97380c73_iv
-  -in secure.json.enc -out ~/rust/secure.json -d
+  -in secure.json.enc -out ~/secure.json -d
 deploy:
   provider: gae
   keyfile: ~/secure.json
